--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="description"
-            content="Discover Nabilah Argyanti's portfolio, showcasing her expertise in web development with a collection of projects and skills demonstration."
+            content="Discover Belay Sirak's portfolio, showcasing her expertise in web development with a collection of projects and skills demonstration."
         />
-        <title>Nabilah Argyanti's Portfolio</title>
+        <title>Belay Sirak's Portfolio</title>
     </head>
     <body>
         <div id="app"></div>
