Update author name and email

--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="description"
-            content="Discover Belay Sirak's portfolio, showcasing her expertise in web development with a collection of projects and skills demonstration."
+            content="Discover Belay Sirak's portfolio, showcasing his expertise in web development with a collection of projects and skills demonstration."
         />
+        <meta property="og:title" content="Belay Sirak's Portfolio" />
+        <meta property="og:description" content="Discover Belay Sirak's portfolio, showcasing his expertise in web development with a collection of projects and skills demonstration." />
+        <meta property="og:image" content="/images/pro.jpg" />
+        <meta property="og:url" content="https://belaysirak.vercel.app/" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Belay Sirak's Portfolio" />
+        <meta name="twitter:description" content="Discover Belay Sirak's portfolio, showcasing his expertise in web development with a collection of projects and skills demonstration." />
+        <meta name="twitter:image" content="URL to your Twitter image" />
         <title>Belay Sirak's Portfolio</title>
     </head>
     <body>
