Update og:image path in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         />
         <meta property="og:title" content="Belay Sirak's Portfolio" />
         <meta property="og:description" content="Discover Belay Sirak's portfolio, showcasing his expertise in web development with a collection of projects and skills demonstration." />
-        <meta property="og:image" content="/images/pro.jpg" />
+        <meta property="og:image" content="/public/images/pro.jpg" />
         <meta property="og:url" content="https://belaysirak.vercel.app/" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:title" content="Belay Sirak's Portfolio" />
