--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         />
         <meta property="og:title" content="Belay Sirak's Portfolio" />
         <meta property="og:description" content="Discover Belay Sirak's portfolio, showcasing his expertise in web development with a collection of projects and skills demonstration." />
-        <meta property="og:image" content="/public/images/pro.jpg" />
+        <meta property="og:image" content="https://belaysirak.vercel.app/images/pro.jpg" /> <!-- Use absolute URL -->
         <meta property="og:url" content="https://belaysirak.vercel.app/" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:title" content="Belay Sirak's Portfolio" />
         <meta name="twitter:description" content="Discover Belay Sirak's portfolio, showcasing his expertise in web development with a collection of projects and skills demonstration." />
-        <meta name="twitter:image" content="URL to your Twitter image" />
+        <meta name="twitter:image" content="/public/images/pro.jpg" />
         <title>Belay Sirak's Portfolio</title>
     </head>
     <body>
