--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" href="/favicon.ico" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta
-            name="description"
-            content="Discover Belay Sirak's portfolio, showcasing his expertise in web development with a collection of projects and skills demonstration."
-        />
-        <meta property="og:title" content="Belay Sirak's Portfolio" />
-        <meta property="og:description" content="Discover Belay Sirak's portfolio, showcasing his expertise in web development with a collection of projects and skills demonstration." />
-        <meta property="og:image" content="https://belaysirak.vercel.app/images/pro.jpg" /> <!-- Use absolute URL -->
-        <meta property="og:url" content="https://belaysirak.vercel.app/" />
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="Belay Sirak's Portfolio" />
-        <meta name="twitter:description" content="Discover Belay Sirak's portfolio, showcasing his expertise in web development with a collection of projects and skills demonstration." />
-        <meta name="twitter:image" content="/public/images/pro.jpg" />
-        <title>Belay Sirak's Portfolio</title>
-    </head>
-    <body>
-        <div id="app"></div>
-        <script type="module" src="/src/main.js"></script>
-    </body>
+
+<head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Discover Belay Sirak's portfolio, showcasing his expertise in web development with a collection of projects and skills demonstration." />
+    <meta property="og:title" content="Belay Sirak's Portfolio" />
+    <meta property="og:description"
+        content="Discover Belay Sirak's portfolio, showcasing his expertise in web development with a collection of projects and skills demonstration." />
+    <meta property="og:image" content="https://belaysirak.vercel.app/images/pro.jpg" /> <!-- Use absolute URL -->
+    <meta property="og:url" content="https://belaysirak.vercel.app/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Belay Sirak's Portfolio" />
+    <meta name="twitter:description"
+        content="Discover Belay Sirak's portfolio, showcasing his expertise in web development with a collection of projects and skills demonstration." />
+    <meta name="twitter:image" content="/public/images/pro.jpg" />
+    <title>Belay Sirak's Portfolio</title>
+</head>
+
+<body>
+    <!-- Loading Spinner -->
+    <div id="loader" class="loader">
+        <div class="spinner"></div>
+    </div>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
