Update og:image path in index.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta property="og:title" content="Belay Sirak's Portfolio" />
     <meta property="og:description"
         content="Discover Belay Sirak's portfolio, showcasing his expertise in web development with a collection of projects and skills demonstration." />
-    <meta property="og:image" content="https://belaysirak.vercel.app/images/pro.jpg" /> <!-- Use absolute URL -->
-    <meta property="og:url" content="https://belaysirak.vercel.app/" />
+    <meta property="og:image" content="https://www.belay-sirak.com/images/pro.jpg" /> <!-- Use absolute URL -->
+    <meta property="og:url" content="https://www.belay-sirak.com/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Belay Sirak's Portfolio" />
     <meta name="twitter:description"
